# hng-internship

./: .gitmodules  README.md  nginx_configuration  pyproject.toml  start.sh  subtree
api/: config.py
backend-track/01-hello-api/: Dockerfile
backend-track/01-hello-api/api/: main.py  routes.py
backend-track/01-hello-api/scripts/: publish_docker_image.sh  run_docker_container.sh
backend-track/02-user-authentication-and-organization/: README.md  pyproject.toml
devops-track/00-deploy-static-website/static/: README.md  index.html
devops-track/01-create-users/: README.md  create_users.sh
scripts/: docker_install.sh  nginx_install.sh  rebuild.sh  run.sh
static/: styles.css
