[tool.poetry]
name = "app"
version = "0.1.0"
description = "A user authentication and organization REST API"
authors = ["Paul John <rainson.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
